tests/parsing/smtlib/v2.6/errors/024_var_binding_bad_term_2.smt2
(set-logic ALL)
(assert (let ((x !)) (= x 42)))
