tests/parsing/smtlib/v2.6/errors/024_var_binding_bad_term_2.expected
File "tests/parsing/smtlib/v2.6/errors/024_var_binding_bad_term_2.smt2", line 2, character 17-18:
Error while parsing a variable binding, read the reserved word '!',
      but expected a term.
